# system-analysis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HARDWARE_QUERY_MIGRATION.md  LICENSE-APACHE  LICENSE-MIT  MIGRATION_COMPLETE.md  NEW_API_FEATURES.md  README.md  SECURITY.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
benches/: benchmark.rs
examples/: ai_hardware_compatibility.rs  ai_workload_analysis.rs  basic_analysis.rs
src/: analyzer.rs  capabilities.rs  dynamic_models.rs  error.rs  feedback.rs  lib.rs  models.rs  resources.rs  types.rs  utils.rs  workloads.rs
tests/: integration_tests.rs
