[package]
name = "system-analysis"
version = "0.2.0"
edition = "2024"
authors = ["Eric Evans <ciresnave@gmail.com>"]
description = "A comprehensive Rust library for analyzing system capabilities, workload requirements, and optimal resource allocation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ciresnave/system-analysis"
documentation = "https://docs.rs/system-analysis"
homepage = "https://github.com/ciresnave/system-analysis"
keywords = ["system", "analysis", "hardware", "workload", "performance"]
categories = ["hardware-support", "development-tools", "science"]
readme = "README.md"
rust-version = "1.85"
exclude = [
    "target/*",
    "Cargo.lock",
    ".git/*",
    ".github/*",
    ".vscode/*",
    ".idea/*",
    "*.tmp",
    "*.bak",
    "*.backup",
    "*.orig",
    "*.log",
    ".DS_Store",
    "Thumbs.db",
    ".env*"
]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Numeric operations
num-traits = "0.2"

# Parallel computation
rayon = "1.7"

# Concurrent data structures
dashmap = "6.1"

# Logging and diagnostics
tracing = "0.1"
tracing-subscriber = "0.3"

# System information - comprehensive hardware detection with AI accelerator support
hardware-query = "0.2.0"  # AI-focused hardware detection with accelerator support
sysinfo = "0.33"  # Fallback for compatibility during transition

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.15"

# HTTP client for model data fetching
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# HTML parsing for web scraping
scraper = "0.21"

# URL handling
url = "2.5"
nvml-wrapper = "0.11.0"

# Note: nvml-wrapper now included in hardware-query, no longer needed here

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
tempfile = "3.8"
criterion = { version = "0.6", features = ["html_reports"] }

[features]
default = ["enhanced-detection", "hardware-query-integration"]
enhanced-detection = []  # Enable all hardware-query features
hardware-query-integration = []  # Hardware-query support now included by default
gpu-detection = []       # GPU detection capabilities
gpu-vendor-nvidia = ["hardware-query/nvidia"]   # Map to hardware-query's nvidia feature
gpu-vendor-amd = ["hardware-query/amd"]         # Map to hardware-query's amd feature
gpu-vendor-intel = []    # Map to hardware-query's intel feature

[[example]]
name = "basic_analysis"
path = "examples/basic_analysis.rs"

[[example]]
name = "ai_workload_analysis"
path = "examples/ai_workload_analysis.rs"

[[example]]
name = "ai_hardware_compatibility"
path = "examples/ai_hardware_compatibility.rs"
[[bench]]
name = "benchmark"
harness = false
